--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@
   color: #fff;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  color: yellowgreen;
+}
+
 .coin-app {
   display: flex;
   flex-direction: column;
@@ -16,36 +22,11 @@
   margin-top: 64px;
   color: #fff;
 }
-
-.coin-search {
-  margin-bottom: 64px;
+.list-header {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-content: center;
+  font-size: 32px;
 }
-
-.coin-text {
-  margin-bottom: 32px;
-  text-align: center;
-}
-
-.coin-input {
-  padding-left: 16px;
-  width: 300px;
-  height: 50px;
-  border-radius: 4px;
-  border: none;
-  background-image: linear-gradient(
-    -225deg,
-    #ac32e4 0%,
-    #7918f2 48%,
-    #4801ff 100%
-  );
-
-  color: #e2e2e2;
-}
-
-.coin-input::placeholder {
-  color: #e2e2e2;
+.Home {
+  margin-right: 50px;
 }
